substrate/primitives/runtime-interface/tests/ui/pass_by_inner_with_two_fields.stderr
error: Only newtype/one field structs are supported by `PassByInner`!
  --> tests/ui/pass_by_inner_with_two_fields.rs:20:10
   |
20 | #[derive(PassByInner)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `PassByInner` (in Nightly builds, run with -Z macro-backtrace for more info)
